[package]
name = "auto_insurance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.1.0"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
thirtyfour = "0.32.0"
tokio = { version = "1", features = ["full"] }
